--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "moment": "^2.26.0",
+    "ng-zorro-antd": "^9.1.2",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.4",
